fixed: menu, dialog overlay, layout breaks in constructor, null container processing in constructor

--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -15,6 +15,7 @@
 }
 
 .elementContainer {
+	min-width: 568px;
 	scroll-snap-align: start;
 	padding-top: 16px;
 }
