--- a/src/components/modal-overlay/modal-overlay.module.css
+++ b/src/components/modal-overlay/modal-overlay.module.css
@@ -7,5 +7,5 @@
 	align-items: center;
 	width: 100%;
 	min-height: 100%;
-	background-color: rgba(0, 0, 0, 0.6);
+	background-color: rgba(0, 0, 0, 0.4);
 }
