--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -23,6 +23,6 @@
 }
 
 .icon {
-	width: '100px';
-	heigth: '100px';
+	width: 100px;
+	heigth: 100px;
 }
